[package]
name = "userror"
version = "0.0.0"
authors = ["Sean Marshallsay <srm.1708@gmail.com>"]

description = "User-facing error messages for command-line programs."
readme = "README.md"
keywords = ["cli", "error", "message", "warning"]

homepage = "https://github.com/Sean1708/userror"
repository = "https://github.com/Sean1708/userrror.git"

[dependencies]
ansi_term = { version = "0.7", optional = true }

[features]
default = ["colour"]
colour = ["ansi_term"]
